--- a/scss/post.scss
+++ b/scss/post.scss
@@ -37,6 +37,23 @@ img.committeeicon{
     color: --var($primary);
 }
 
+.site-name.long{
+    display: none;
+}
+
+.site-name.short{
+    display: block;
+}
+
+@media (min-width: 350px) {
+    .site-name.long{
+        display: block;
+    }
+    .site-name.short{
+        display: none;
+    }
+}
+
 table.discussion-list tr td:nth-child(3), table.discussion-list tr td:nth-child(4)  { display: none; }
 
 table.discussion-list tr th:nth-child(3), table.discussion-list tr th:nth-child(4)  { display: none; }
