--- a/templates/mainpage/resources.mustache
+++ b/templates/mainpage/resources.mustache
@@ -1,7 +1,7 @@
 <h4 class="text-center">Popular Resources</h4>
     <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 row-cols-sm-2 row-cols-md-4 mx-0 mb-2 row-cols-2 row-cols-xl-4 main-page-resources-cont p-2 m-0">
         <div class="col flex-column d-flex justify-content-center align-items-center py-2 px-2"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card text-white"><img class="card-img w-100 d-block main-page-resource-card-img no-border-radius h-100 w-100" src="{{resourceimg}}">
+            <div class="card main-page-card text-white"><img class="card-img d-block main-page-resource-card-img no-border-radius" src="{{resourceimg}}">
                 <div class="card-img-overlay flex-column d-flex justify-content-center align-items-center">
                     <h4 class="main-page-link mb-0 text-center">Forum</h4>
                 </div>
