--- a/templates/mainpage/sections.mustache
+++ b/templates/mainpage/sections.mustache
@@ -3,7 +3,7 @@
         <h4 class="text-center">Explore our Sections</h4>
     </div>
     </div>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 row-cols-xl-6 row-cols-md-3 row-cols-lg-4" id="accordion-3" role="tablist">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 row-cols-xl-6 row-cols-md-3 row-cols-lg-4" id="accordion-3" role="tablist">
         {{#sections}}
             {{> theme_apoa/mainpage/sectionlogo}}
         {{/sections}}
