--- a/templates/mainpage/subjumbo/subjumbolistitemwidetopcopy.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemwidetopcopy.mustache
@@ -6,14 +6,21 @@
                 <div class="w-100">
                     <p><span class="main-page-link" style="font-size: 14px;">{{itemauthors}}</span>
                     <span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white" href="{{{itemtagurl}}}">{{itemtag}}</a></small></p>
-                    <h6 class="text-right main-page-link-sub float-right" href="#accordion-{{itemrootid}} .item-1" data-toggle="collapse" aria-expanded="true" aria-controls="#accordion-{{itemrootid}} .item-1">Show Abstract</h6>
+                    <h6 class="text-right main-page-link-sub float-right" href="#accordion-{{itemrootid}} .item-1" data-toggle="collapse" aria-expanded="true" aria-controls="#accordion-{{itemrootid}} .item-1">Show Discussion</h6>
                 </div>
             </div>
         </div>
     </div>
     <div class="collapse item-1" role="tabpanel" data-parent="#accordion-{{itemrootid}}" style="border-style: none;">
         <div class="card-body">
-            <p class="card-text">{{{itemsummary}}}</p>
+            {{#forumposts}}
+            <div>
+                <h5 class="card-title">{{name}}</h5>
+                <h6 class="text-muted card-subtitle mb-2">{{author}}</h6>
+                <p class="card-text">{{{message}}}</p>
+                <a class="card-link main-page-link-sub" href="{{forumurl}}">Go to discussion</a>
+            </div>
+            {{/forumposts}}
         </div>
     </div>
 </div>
