--- a/templates/mainpage/subjumbo/subjumbolistitemwidecopy.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemwidecopy.mustache
@@ -6,16 +6,28 @@
                 <div class="journal-sub-card-text-cont">
                     <p class="mb-2 journal-card-text">
                     <span class="journal-sub-card-authors main-page-link main-page-sub-card-text main-page-sub-card-text">{{itemauthors}}</span>
-                    <span>&nbsp;|&nbsp;<small class="text-muted main-page-link-sub">{{itemcat}}</small></span>
+                    <span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white" href="{{{itemtagurl}}}">{{itemtag}}</a></small>
                     </p>
-                    <span class="float-right main-page-link-sub" href="#accordion-{{itemrootid}} .item-{{itemindex}}" data-toggle="collapse" aria-controls="#accordion-{{itemrootid}} .item-{{itemindex}}" aria-expanded="true">Show Abstract</span>
+                    <span class="float-right main-page-link-sub text-primary" href="#accordion-{{itemrootid}} .item-{{itemindex}}" data-toggle="collapse" aria-controls="#accordion-{{itemrootid}} .item-{{itemindex}}" aria-expanded="true">Show Discussion</span>
                 </div>
             </div>
         </div>
     </div>
     <div class="collapse item-{{itemindex}}" role="tabpanel" data-parent="#accordion-{{itemrootid}}">
         <div class="card-body">
-            <p class="card-text">{{{itemsummary}}}</p>
+            {{#forum}}
+            <div>
+                {{#forumpost}}
+                    <h5 class="card-title">{{name}}</h5>
+                    <h6 class="text-muted card-subtitle mb-2">{{author}}</h6>
+                    <p class="card-text">{{{message}}}</p>
+                {{/forumpost}}
+                {{^forumpost}}
+                    <h6 class="text-muted card-subtitle mb-2">No topics yet.</h6>
+                {{/forumpost}}
+                <a class="card-link main-page-link-sub" href="{{forumurl}}">Go to discussion</a>
+            </div>
+            {{/forum}}
         </div>
     </div>
 </div>
