--- a/templates/mainpage/subjumbo/subjumbolistitemwidecopy.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemwidecopy.mustache
@@ -6,7 +6,7 @@
                 <div class="journal-sub-card-text-cont">
                     <p class="mb-2 journal-card-text">
                     <span class="journal-sub-card-authors main-page-link main-page-sub-card-text main-page-sub-card-text">{{itemauthors}}</span>
-                    <span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white" href="{{{itemtagurl}}}">{{itemtag}}</a></small>
+                    <span>&nbsp;|&nbsp;<small class="text-muted main-page-link-sub"><a class="main-page-link-sub" href="{{{itemtagurl}}}">{{itemtag}}</a></small></span>
                     </p>
                     <span class="float-right main-page-link-sub text-primary" href="#accordion-{{itemrootid}} .item-{{itemindex}}" data-toggle="collapse" aria-controls="#accordion-{{itemrootid}} .item-{{itemindex}}" aria-expanded="true">Show Discussion</span>
                 </div>
