--- a/templates/full_header.mustache
+++ b/templates/full_header.mustache
@@ -30,7 +30,7 @@
     }
 }}
 <header id="page-header" class="d-print-none px-2 px-sm-0">
-    <div class="container main-page-container">
+    <div class="container main-page-container my-0 pt-0">
         <div class="d-flex flex-wrap">
             {{#hasnavbar}}
             <div id="page-navbar">
