--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -1,6 +1,10 @@
+
+
 <div class="col col-12 justify-content-center d-flex flex-column px-0 w-100">
+    <a class="strecthed-link" href="{{linkurl}}">
     <span class="position-absolute secondary-nav-logo-cont" >
         <img class="secondary-nav-logo-img" src="{{imgurl}}"/>
         </span>
     <h2 class="text-center mb-0">{{title}}</h2>
+    </a>
 </div>
