--- a/templates/mainpage/subjumbo.mustache
+++ b/templates/mainpage/subjumbo.mustache
@@ -1,7 +1,7 @@
-<div class="row py-3 mx-0 main-page-section-top-border">
+<div class="row pt-3 mx-0 main-page-section-top-border">
     <div class="col-md-6 col-lg-6 col-md-12 pb-3 px-0 px-lg-2">
         {{#Elibrary}}
-            {{> theme_apoa/mainpage/subjumbo/subjumbolistwidecopy}}
+            {{> theme_apoa/mainpage/subjumbo/subjumbolistwide}}
         {{/Elibrary}}
     </div>
     <div class="col-md-6 col-lg-3 pb-3 px-0 px-lg-2">
