--- a/templates/mainpage/subjumbo/subjumbolistitemtop.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemtop.mustache
@@ -1,5 +1,6 @@
 <li class="list-group-item pb-3 p-0 main-page-sub-list-group-item">
-    <div class="card"><img class="card-img w-100 d-block main-page-sub-card-img no-border-radius" src="{{itemimg}}"><a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
+    <div class="card"><img class="card-img w-100 d-block main-page-sub-card-img no-border-radius" src="{{itemimg}}">
+        <a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
         <div class="card-img-overlay text-white no-border-radius">
             <h4 class="main-page-link">{{itemtitle}}</h4>
             <div>
