--- a/templates/section/elibrarylistitemtop.mustache
+++ b/templates/section/elibrarylistitemtop.mustache
@@ -8,13 +8,13 @@
                 <h5 class="journal-card-title main-page-link card-text-over-picture"><br>{{itemtitle}}<br><br></h5>
                 <div class="w-100">
                     <p><span class="main-page-link" style="font-size: 14px;">{{itemauthors}}</span>
-                    <span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white" href="{{{itemtagurl}}}">{{itemtag}}</a></small></p>
-                    <h6 class="text-right main-page-link-sub float-right" href="#accordion-{{itemrootid}} .item-{{itemindex}}" data-toggle="collapse" aria-expanded="true" aria-controls="#accordion-{{itemrootid}} .item-1">Show Discussion</h6>
+                    <span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white" href="{{{itemrooturl}}}">{{itemroot}}</a></small></p>
+                    <h6 class="text-right main-page-link-sub float-right" href="#accordion .item-{{itemindex}}" data-toggle="collapse" aria-expanded="true" aria-controls="#accordion .item-1">Show Discussion</h6>
                 </div>
             </div>
         </div>
     </div>
-    <div class="collapse item-{{itemindex}}" role="tabpanel" data-parent="#accordion-{{itemrootid}}" style="border-style: none;">
+    <div class="collapse item-{{itemindex}}" role="tabpanel" data-parent="#accordion" style="border-style: none;">
         <div class="card-body">
             {{#forum}}
             <div>
