--- a/scss/bootstudio.scss
+++ b/scss/bootstudio.scss
@@ -244,6 +244,14 @@
     height: 100%;
     overflow: hidden;
   }
+
+  .related-image {
+    object-fit: cover;
+    /*object-position: right;*/
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+  }
   
   .fit-cover.main-page-course-card-img {
     display: none!important;
