--- a/templates/lists/listitems/pagelist.mustache
+++ b/templates/lists/listitems/pagelist.mustache
@@ -6,11 +6,11 @@
                     <div class="card-img-overlay main-page-card">
                         <h5 class="main-page-announcements-title main-page-link">{{name}}</h5>
                         <div>
-                            <p><span class="main-page-link card-summary-hide-mobile">{{{summary}}}</span><span>&nbsp;|&nbsp;</span><a href="{{caturl}}"><small class="main-page-link-sub">{{tag}}</small></a></p>
+                            <p><span class="main-page-link card-summary-hide-mobile">{{{summary}}}</span><span>&nbsp;|&nbsp;</span><a href="{{caturl}}"><small class="main-page-link-sub">{{cat}}</small></a></p>
                         </div>
                     </div>
                 </div>
-                <div class="col col-5 h-100 px-0 main-page-announcements-card-image-cont"><img class="main-page-sec-image" src="{{img}}"></div>
+                <div class="col col-5 h-100 px-0 main-page-announcements-card-image-cont"><img class="related-image" src="{{img}}"></div>
             </div>
         </div>
     </div>
