--- a/templates/mainpage/subjumbo/subjumbolistitemtop.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemtop.mustache
@@ -2,9 +2,11 @@
     <div class="card"><img class="card-img w-100 d-block main-page-sub-card-img no-border-radius" src="{{itemimg}}">
         <a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
         <div class="card-img-overlay text-white no-border-radius">
-            <h4 class="main-page-link">{{itemtitle}}</h4>
-            <div>
-                <p class="small"><span><a class="main-page-link-sub text-white"href="{{itemrooturl}}">{{itemroot}}</a></span><span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white"href="{{itemcaturl}}">{{itemcat}}</a></small></p>
+            <div class="card-text-over-picture">
+                <h4 class="main-page-link">{{itemtitle}}</h4>
+                <div>
+                    <p class="small"><span><a class="main-page-link-sub text-white"href="{{itemrooturl}}">{{itemroot}}</a></span><span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white"href="{{itemcaturl}}">{{itemcat}}</a></small></p>
+                </div>
             </div>
         </div>
     </div>
