--- a/scss/post.scss
+++ b/scss/post.scss
@@ -54,6 +54,10 @@ img.committeeicon{
     }
 }
 
+.footer-section a{
+    color: white !important;
+}
+
 table.discussion-list tr td:nth-child(3), table.discussion-list tr td:nth-child(4)  { display: none; }
 
 table.discussion-list tr th:nth-child(3), table.discussion-list tr th:nth-child(4)  { display: none; }
