--- a/templates/lists/listitems/categorycourselistitem.mustache
+++ b/templates/lists/listitems/categorycourselistitem.mustache
@@ -7,9 +7,6 @@
                         <h5 class="main-page-announcements-title main-page-link">{{name}}</h5>
                         <div>
                             <p>
-                                {{#summary}}
-                                <span class="main-page-link card-summary-hide-mobile">{{{summary}}}</span>
-                                {{/summary}}
                                 {{#tag}}
                                 <span>&nbsp;|&nbsp;</span>
                                 <a href="{{caturl}}"><small class="main-page-link-sub">{{tag}}</small></a>
@@ -23,7 +20,7 @@
                         {{/date}}
                     </div>
                 </div>
-                <div class="col col-5 h-100 px-0 main-page-announcements-card-image-cont"><img class="main-page-sec-image" src="{{img}}"></div>
+                <div class="col col-5 h-100 px-0 main-page-announcements-card-image-cont"><img class="categorylist-image" src="{{img}}"></div>
             </div>
         </div>
     </div>
