--- a/templates/lists/listitems/mainpageeventslistitem.mustache
+++ b/templates/lists/listitems/mainpageeventslistitem.mustache
@@ -1,7 +1,7 @@
 <li class="list-group-item p-0 main-page-sub-list-group-item">
     <div class="card" style="border-style: none;"><a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
         <div class="card-body pb-0">
-            <div class="row">
+            <div class="row w-100">
                 <div class="col col-8">
                     <h5 class="text-muted mb-2 main-page-link">{{itemtitle}}</h5>
                     <div>
