--- a/templates/secondarynav.mustache
+++ b/templates/secondarynav.mustache
@@ -1,4 +1,4 @@
-<div class="container p-0 mb-1 mb-md-2 m-0 w-100" style="max-width: 100%!important;">
+<div class="container p-0 mb-3 m-0 w-100" style="max-width: 100%!important;">
     <div class="row justify-content-start py-2 w-100 mx-0" style="height: 80px;color: var(--primary);background: var(--light);">
         {{{output.context_header_cat}}}
     </div>
