--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -1,41 +1,50 @@
-<footer class="text-white bg-dark" style="background-color: var(--primary)!important;">
+<footer id="page-footer" class="footer-popover bg-primary text-white">
     <div class="container py-4 py-lg-5">
         <div class="row justify-content-center">
             <div class="col-sm-4 col-md-3 text-center text-lg-left d-flex flex-column">
-                <h3 class="font-weight-bold" style="font-size: 1rem;">Services</h3>
-                <ul class="list-unstyled">
-                    <li><a class="text-white" href="#">Web design</a></li>
-                    <li><a class="text-white" href="#">Development</a></li>
-                    <li><a class="text-white" href="#">Hosting</a></li>
-                </ul>
+                
+                <h3 class="font-weight-bold" style="font-size: 1rem;">Contact and Location</h3>
+                {{{output.footer_contact_info}}}
+                {{# output.has_popover_links }}
+                    <div class="footer-section p-3 border-bottom">
+                        {{# output.supportemail }}
+                            <div class="footer-support-link">{{{ output.supportemail }}}</div>
+                        {{/ output.supportemail }}
+                    </div>
+                {{/ output.has_popover_links }}
             </div>
             <div class="col-sm-4 col-md-3 text-center text-lg-left d-flex flex-column">
-                <h3 class="font-weight-bold" style="font-size: 1rem;">About</h3>
-                <ul class="list-unstyled">
-                    <li><a class="text-white" href="#">Company</a></li>
-                    <li><a class="text-white" href="#">Team</a></li>
-                    <li><a class="text-white" href="#">Legacy</a></li>
+                <h3 class="font-weight-bold" style="font-size: 1rem;">Quick Links</h3>
+                <ul class="list-unstyled m-0">
+                {{#output.footer_quick_links}}
+                    <li><a class="text-white" href="{{quicklink}}">{{{quickname}}}</a></li>
+                {{/output.footer_quick_links}}
                 </ul>
             </div>
-            <div class="col-sm-4 col-md-3 text-center text-lg-left d-flex flex-column">
-                <h3 class="font-weight-bold" style="font-size: 1rem;">Careers</h3>
-                <ul class="list-unstyled">
-                    <li><a class="text-white" href="#">Job openings</a></li>
-                    <li><a class="text-white" href="#">Employee success</a></li>
-                    <li><a class="text-white" href="#">Benefits</a></li>
-                </ul>
-            </div>
-            <div class="col-lg-3 text-center text-lg-left d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
-                <div class="font-weight-bold d-flex align-items-center mb-2"><span class="bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center bs-icon mr-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                            <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5v-1zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z"></path>
-                            <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5v-1zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                        </svg></span><span>Brand</span></div>
-                <p class="text-white-50">Sem eleifend donec molestie, integer quisque orci aliquam.</p>
+            <div class="col-12 col-lg-6 text-center text-lg-left d-flex flex-column order-first order-lg-last">
+                <div class="footer-section p-3 border-bottom">
+                        <div class="logininfo">
+                            {{{ output.login_info }}}
+                        </div>
+                        <div class="tool_usertours-resettourcontainer">
+                        </div>
+
+                        {{{ output.standard_footer_html }}}
+                        {{{ output.standard_end_of_body_html }}}
+                    </div>
+                    <div class="footer-section p-3">
+                        <div>{{#str}}poweredbymoodle, core{{/str}}</div>
+                        {{#output.moodle_release}}
+                            <div>
+                                {{#str}}version, core{{/str}} {{{ output.moodle_release }}}
+                            </div>
+                        {{/output.moodle_release}}
+                    </div>
             </div>
         </div>
         <hr>
         <div class="d-flex justify-content-between pt-3" style="background: var(--bs-gray-100);">
-            <p class="mb-0">Copyright © 2023 Brand</p>
+            <p class="mb-0">Copyright © 2023 {{sitenamefull}}</p>
             <ul class="list-inline text-white-50 mb-0">
                 <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
                         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
@@ -49,4 +58,15 @@
             </ul>
         </div>
     </div>
+    <div class="footer-content-debugging footer-dark bg-dark text-light">
+        <div class="container-fluid footer-dark-inner">
+            {{{ output.debug_footer_html }}}
+        </div>
+    </div>
+
 </footer>
+{{#js}}
+require(['theme_boost/footer-popover'], function(FooterPopover) {
+    FooterPopover.init();
+});
+{{/js}}
