--- a/templates/mainpage/sections.mustache
+++ b/templates/mainpage/sections.mustache
@@ -1,11 +1,12 @@
-<div class="row">
+<div class="row py-3 mx-0 main-page-section-top-border">
     <div class="col pb-2">
         <h4 class="text-center">Explore our Sections</h4>
+        <p class="text-center">APOA has 12 subsections dedicated to specific fields of Orthopaedics</p>
     </div>
-    </div>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 row-cols-xl-6 row-cols-md-3 row-cols-lg-4" id="accordion-3" role="tablist">
+</div>
+<div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 row-cols-xl-6 row-cols-md-3 row-cols-lg-4" id="accordion-3" role="tablist">
         {{#sections}}
             {{> theme_apoa/mainpage/sectionlogo}}
         {{/sections}}
         
-    </div>
+</div>
