--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -176,7 +176,7 @@
                 </div>
             </div>
         </div>
-        {{> theme_boost/footer }}
+        {{> theme_apoa/footer }}
     </div>
     {{{ output.standard_after_main_region_html }}}
 </div>
