--- a/templates/sectionlanding.mustache
+++ b/templates/sectionlanding.mustache
@@ -1,4 +1,4 @@
-<div class="container my-0 px-0 pt-0" style="">
+<div class="my-0 px-0 pt-0" style="">
     <div class="row mx-0" style="">
         <div class="col-12 col-md-5 mb-3 px-2 px-lg-2 section-page-top-cont">
             <div class="row mx-0" style="">
