--- a/scss/post.scss
+++ b/scss/post.scss
@@ -16,13 +16,15 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
 
 .committeeiconcontainer{
     width: 100px;
-    height: 100px;
+    height: 120px;
 }
 
 img.committeeicon{
     width:100%;
+    object-fit: cover;
+    object-position: top;
     height:100%;
-    border-radius: 100%;
+    border-radius: 5%;
 }
 
 .navbar.fixed-top{
