--- a/templates/lists/listitems/mainpageeventslistitem.mustache
+++ b/templates/lists/listitems/mainpageeventslistitem.mustache
@@ -10,8 +10,8 @@
                     </div>
                 </div>
                 <div class="col col-4">
-                    <p class="text-muted mb-2  text-right main-page-sub-card-text">{{#userdate}}{{itemstartdate}}, {{#str}} strftimedatetimeshort, core_langconfig {{/str}}{{/userdate}}</p>
-                    <p class="text-muted mb-2 text-right main-page-sub-card-text"> {{#userdate}}{{itemenddate}}, {{#str}} strftimedatetimeshort, core_langconfig {{/str}}{{/userdate}}</p>
+                    <p class="text-muted mb-2  text-right main-page-sub-card-text">{{#userdate}}{{itemstartdate}}, {{#str}} strftimedate, core_langconfig {{/str}}{{/userdate}}</p>
+                    <p class="text-muted mb-2 text-right main-page-sub-card-text"> {{#userdate}}{{itemenddate}}, {{#str}} strftimedate, core_langconfig {{/str}}{{/userdate}}</p>
                 </div>
             </div>
         </div>
