--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -159,7 +159,9 @@
                                 </div>
                                 <div class="col col-12 col-md-3">
                                     <h4 class="text-center main-page-section-title pt-2 px-0">Related Content</h4>
-                                        {{> theme_apoa/lists/listitems/pagelist}}
+                                        {{#sidebaritems}}
+                                            {{> theme_apoa/lists/listitems/pagelist}}
+                                        {{#sidebaritems}}
                                 </div>
                             </div>
                         </div>
