--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -161,7 +161,7 @@
                                     <h4 class="text-center main-page-section-title pt-2 px-0">Related Content</h4>
                                         {{#sidebaritems}}
                                             {{> theme_apoa/lists/listitems/pagelist}}
-                                        {{#sidebaritems}}
+                                        {{/sidebaritems}}
                                 </div>
                             </div>
                         </div>
