--- a/templates/lists/listitems/pagelist.mustache
+++ b/templates/lists/listitems/pagelist.mustache
@@ -2,7 +2,7 @@
     <div class="col col-12 px-0"><a class="stretched-link main-page-link-wrapper" href="{{url}}"></a>
         <div class="main-page-announcements-card w-100 h-100">
             <div class="row h-100 mx-0">
-                <div class="col col-7 h-100 px-0 main-page-announcements-card-text-cont">
+                <div class="col col-7 h-100 px-0">
                     <div class="card-img-overlay main-page-card">
                         <h5 class="main-page-announcements-title main-page-link">{{name}}</h5>
                         <div>
