--- a/templates/lists/listitems/pagelist.mustache
+++ b/templates/lists/listitems/pagelist.mustache
@@ -1,4 +1,4 @@
-<div class="row mx-0 pt-2 main-page-announcements-card-cont">
+<div class="row mx-0 pt-2">
     <div class="col col-12 px-0"><a class="stretched-link main-page-link-wrapper" href="{{url}}"></a>
         <div class="main-page-announcements-card w-100 h-100">
             <div class="row h-100 mx-0">
@@ -10,7 +10,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-5 h-100 px-0 main-page-announcements-card-image-cont"><img class="related-image" src="{{img}}"></div>
+                <div class="col col-5 h-100 px-0"><img class="related-image" src="{{img}}"></div>
             </div>
         </div>
     </div>
