--- a/templates/category.mustache
+++ b/templates/category.mustache
@@ -12,7 +12,9 @@
                 {{#firsttab}}
                     {{#subcategorycourses}}
                         {{#first}}
-                            <h4 class="p-1 pt-2 m-0 main-page-section-title main-page-link w-100">{{categorytitle}}</h4>
+                            <h4 class="text-center main-page-section-title pt-2 p-1 px-0 position-relative" style="z-index: 2">
+                                <a class="section_title main-page-link" href="{{{categoryurl}}}">{{categorytitle}}</a>
+                            </h4>
                             <a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
                                 <div class="card border-0 pb-0 section-page-sub-card">
                                     <img class="card-img w-100 d-block section-page-sub-card-img no-border-radius" src="{{itemimg}}">
@@ -33,7 +35,7 @@
                                                     </a>
                                                 </span>
                                             </span>
-                                            </h1>
+                                        </h1>
                                     </div>
                                 </div>
                             {{/first}}
@@ -45,31 +47,12 @@
     <div class="row pt-3 mx-0 main-page-section-top-border">
         {{#categorylist}}
             {{^firsttab}}
-                <div class="col-md-6 col-lg-6 col-md-12 pb-3 px-0 px-lg-2">
-                    <h4 class="text-center main-page-section-title pt-2 p-1 px-0 main-page-link">
-                        <a class="section_title main-page-link" href="{{{categoryurl}}}">{{categorytitle}}</a>
+                <div class='col-md-6'>
+                    <h4 class="text-center main-page-section-title pt-2 p-1 px-0">
+                        <a class="section_title main-page-link" href="{{categoryurl}}">{{categorytitle}}</a>
                     </h4>
-                    <ul class="list-group mx-0" style="border-style: none;">
-                        {{#subcategorycourses}}
-                                {{#first}}
-                                    {{> theme_apoa/mainpage/subjumbo/subjumbolistitemtop}}
-                                {{/first}}
-                                {{^first}}
-                                    {{> theme_apoa/mainpage/subjumbo/subjumbolistitem}}
-                                {{/first}}
-                        {{/subcategorycourses}}
-                        <li class="list-group-item p-0 main-page-sub-list-group-item">
-                            <div class="card p-0" style="border-style: none;">
-                                <div class="card-body pb-0 pt-2">
-                                    <p class="mb-1">
-                                    <a class="main-page-link main-page-more-link" href="{{{categoryurl}}}">more {{categorytitle}}...</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                
-                </div>  
+                    {{> theme_apoa/mainpage/subjumbo/subjumbolistwidetab}}
+                </div>
             {{/firsttab}}
         {{/categorylist}}
     </div>
