--- a/scss/post.scss
+++ b/scss/post.scss
@@ -19,6 +19,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
     height: 120px;
 }
 
+.committee{
+    padding-right: 1rem;
+    -webkit-margin-start: 0.2rem;
+}
+
 img.committeeicon{
     width:100%;
     object-fit: cover;
@@ -47,7 +52,7 @@ img.committeeicon{
     display: block;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 400px) {
     .site-name.long{
         display: block;
     }
@@ -84,7 +89,15 @@ img.committeeicon{
       transform: rotate(360deg);
     }
   }
-  
+
+  @media (min-width: 576px) {
+    .committee-container{
+        width: 250px !important;
+      }
+  }
+  .committee-container{
+    width: 100px;
+  }
 
 table.discussion-list tr td:nth-child(3), table.discussion-list tr td:nth-child(4)  { display: none; }
 
