--- a/scss/bootstudio.scss
+++ b/scss/bootstudio.scss
@@ -1051,7 +1051,7 @@
 
   #resourceobject {
     width: 100% !important;
-    height: 1000px;
+    //height: 1000px;
     border-style: none !important;
   }
   
