--- a/templates/lists/listitems/pagelist.mustache
+++ b/templates/lists/listitems/pagelist.mustache
@@ -4,7 +4,7 @@
             <div class="row h-100 mx-0">
                 <div class="col col-7 h-100 px-0">
                     <div class="card-img-overlay main-page-card">
-                        <h5 class="main-page-announcements-title main-page-link">{{name}}</h5>
+                        <h5 class="main-page-announcements-title main-page-link">{{{name}}}</h5>
                         <div>
                             <p><span class="main-page-link card-summary-hide-mobile">{{{summary}}}</span><span>&nbsp;|&nbsp;</span><a href="{{caturl}}"><small class="main-page-link-sub">{{cat}}</small></a></p>
                         </div>
