--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -154,10 +154,10 @@
                         {{#sidebar}}
                         <div class="container main-page-container">
                             <div class="row">
-                                <div class="col col-12 col-md-9">
+                                <div class="col col-12 col-lg-8">
                                     {{{ output.main_content }}}
                                 </div>
-                                <div class="col col-12 col-md-3">
+                                <div class="col col-12 col-lg-4">
                                     <h4 class="text-center main-page-section-title pt-2 px-0">Related Content</h4>
                                         {{#sidebaritems}}
                                             {{> theme_apoa/lists/listitems/pagelist}}
