--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -1,7 +1,6 @@
 <a class="stretched-link main-page-link-wrapper" href=""></a>
 <div class="card main-page-jumbo-main border-0 pr-lg-1">
-    <video class="main-page-jumbo-video main-page-main-image d-block" width="" height="315" autoplay="" muted="" loop="" poster="{{jumbobannerposter}}">
-        <source src="{{jumbobanner}}" type="video/webm">
+    <video src="{{jumbobanner}}" class="main-page-jumbo-video main-page-main-image d-block" width="" height="315" autoplay="" muted="" loop="" poster="{{jumbobannerposter}}">
     </video>
     <div class="card-img-overlay justify-content-start align-items-end d-flex flex-column">
         <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end">
