--- a/templates/sectionlanding.mustache
+++ b/templates/sectionlanding.mustache
@@ -10,29 +10,31 @@
                 {{#categorylist}}
                     {{#About}}
                         {{#subcategorycourses}}
-                        <a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
-                            <div class="card border-0">
-                                <img class="card-img w-100 d-block main-page-sub-card-img no-border-radius" src="{{itemimg}}">
-                                <div class="card-img-overlay justify-content-start align-items-end d-flex flex-column">
-                                    <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end">
-                                        <span class="float-right main-page-jumbo-title d-flex flex-column card-text-over-picture p-2">
-                                            <span class="main-page-link text-right">
-                                                {{itemtitle}}
+                            {{#first}}
+                            <a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
+                                <div class="card border-0">
+                                    <img class="card-img w-100 d-block main-page-sub-card-img no-border-radius" src="{{itemimg}}">
+                                    <div class="card-img-overlay justify-content-start align-items-end d-flex flex-column">
+                                        <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end">
+                                            <span class="float-right main-page-jumbo-title d-flex flex-column card-text-over-picture p-2">
+                                                <span class="main-page-link text-right">
+                                                    {{itemtitle}}
+                                                </span>
+                                                <span class="br text-right main-page-link main-page-sub-card-text">
+                                                    {{{itemdescription}}}
+                                                </span>
+                                                <span class="br text-right main-page-sub-card-text">
+                                                    <a class="main-page-link-sub text-white" href="itemtagurl">
+                                                    <small>
+                                                        {{itemtag}}
+                                                    </small>
+                                                    </a>
+                                                </span>
                                             </span>
-                                            <span class="br text-right main-page-link main-page-sub-card-text">
-                                                {{{itemdescription}}}
-                                            </span>
-                                            <span class="br text-right main-page-sub-card-text">
-                                                <a class="main-page-link-sub text-white" href="itemtagurl">
-                                                <small>
-                                                    {{itemtag}}
-                                                </small>
-                                                </a>
-                                            </span>
-                                        </span>
-                                        </h1>
+                                            </h1>
+                                    </div>
                                 </div>
-                            </div>
+                                {{/first}}
                         {{/subcategorycourses}}
                     {{/About}}
                 {{/categorylist}}
