--- a/templates/mainpage/subjumbo.mustache
+++ b/templates/mainpage/subjumbo.mustache
@@ -1,5 +1,5 @@
 <div class="row pt-3 mx-0 main-page-section-top-border">
-    <div class="col-md-6 col-lg-6 col-md-12 pb-3 px-0 px-lg-2">
+    <div class="col-md-6 col-lg-6 col-md-12 pb-3 px-0 px-lg-2" id="elibraryTabContainer">
         {{#Elibrary}}
             {{> theme_apoa/mainpage/subjumbo/subjumbolistwide}}
         {{/Elibrary}}
